# itch-parser

./: .env.example  .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_book_engine.cpp  bench_parser.cpp
include/itch/: instrument_info.h  message_buffer.h  messages.h  order_book.h  order_record.h  price.h  snapshot.h
src/: book_engine.cpp  book_engine.h  feed_reader.cpp  feed_reader.h  main.cpp  parser.cpp  parser.h  rest_server.cpp  rest_server.h  snapshot_publisher.cpp  snapshot_publisher.h  udp_feed_reader.cpp  udp_feed_reader.h
tests/: CMakeLists.txt  test_book_engine.cpp  test_parser.cpp  test_price.cpp  test_rest.cpp  test_udp_feed_reader.cpp
